// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app1. no pages 1`] = `Array []`;

exports[`app1. no pages 2`] = `
"// Generated by nuxt-js-links-generator@0.1.0
"
`;

exports[`app1. no pages 3`] = `
"\\"use strict\\";
// Generated by nuxt-js-links-generator@0.1.0

module.exports = {}"
`;

exports[`app2 1`] = `
Array [
  "function services() { return \\"/services\\" }",
  "function servicesOptions() { return \\"/services/options\\" }",
]
`;

exports[`app2 2`] = `
"// Generated by nuxt-js-links-generator@0.1.0
export function services() { return \\"/services\\" }
export function servicesOptions() { return \\"/services/options\\" }"
`;

exports[`app2 3`] = `
"\\"use strict\\";
// Generated by nuxt-js-links-generator@0.1.0
function services() { return \\"/services\\" }
function servicesOptions() { return \\"/services/options\\" }
module.exports = {services, servicesOptions}"
`;

exports[`app3 1`] = `
Array [
  "function customer(_id: any) { return \`/customer/\${_id}\` }",
  "function services(_id: any) { return \`/services/\${_id}\` }",
  "function servicesId(_type: any,_index: any) { return \`/services/\${_type}/id/\${_index}\` }",
  "function services() { return \\"/services\\" }",
]
`;

exports[`app3 2`] = `
"// Generated by nuxt-js-links-generator@0.1.0
export function customer(_id: any) { return \`/customer/\${_id}\` }
export function services(_id: any) { return \`/services/\${_id}\` }
export function servicesId(_type: any,_index: any) { return \`/services/\${_type}/id/\${_index}\` }
export function services() { return \\"/services\\" }"
`;

exports[`app3 3`] = `
"\\"use strict\\";
// Generated by nuxt-js-links-generator@0.1.0
function customer(_id: any) { return \`/customer/\${_id}\` }
function services(_id: any) { return \`/services/\${_id}\` }
function servicesId(_type: any,_index: any) { return \`/services/\${_type}/id/\${_index}\` }
function services() { return \\"/services\\" }
module.exports = {customer, services, servicesId, services}"
`;
